--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,22 @@
 <resources>
-    <string name="app_name">Splashscreen</string>
+    <string name="app_name">Safetify</string>
+    <string name="open">open</string>
+    <string name="close">close</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="obese_class_iii">obese_class_iii</string>
+    <string name="very_severely_underweight">very_severely_underweight</string>
+    <string name="severely_underweight">severely_underweight</string>
+    <string name="underweight">underweight</string>
+    <string name="normal">normal</string>
+    <string name="overweight">overweight</string>
+    <string name="obese_class_i">obese_class_i</string>
+    <string name="obese_class_ii">obese_class_ii</string>
+
+
+    <string name="appp_name">Flashlight</string>
+    <string name="switch_on_text">Switch On</string>
+    <string name="switch_off_text">Switch Off</string>
+
 </resources>
